rnsc/test_data/integration/error/parser/super_directive/multiple_definitions_recovers.rns
.class MyClass

.super firstClass
.super secondClass

kooba ; <- still reported